--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^14.0.12",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.5"
@@ -39,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.0"
+    "@types/styled-components": "^5.1.0",
+    "babel-plugin-styled-components": "^1.10.7"
   }
 }
