--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,5 @@
 {
+    "presets": ["@babel/preset-env"],
     "plugins": [
         ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]
     ]
