--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://christopherpark88.github.io",
+  "homepage": "https://christopherpark88.github.io/my-website/",
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
@@ -14,11 +14,13 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-typist": "^2.0.1",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-typist": "^2.0.5",
     "styled-components": "^5.1.1"
   },
   "scripts": {
