--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-typist": "^2.0.1",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
+    "react-awesome-reveal": "^2.4.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
